--- a/serverlumen/Cargo.toml
+++ b/serverlumen/Cargo.toml
@@ -5,3 +5,17 @@ edition = "2024"
 license-file = "../LICENSE-AGPL"
 
 [dependencies]
+anyhow = "1.0.99"
+clap = { version = "4.5.47", features = ["derive"] }
+names = "0.14.0"
+prost = "0.14.1"
+serde = { version = "1.0.223", features = ["derive"] }
+tokio = { version = "1.47.1", features = ["full"] }
+toml = "0.9.5"
+tonic = "0.14.2"
+tonic-prost = "0.14.2"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.20"
+
+[build-dependencies]
+tonic-prost-build = "0.14.2"
